# github_release_downloader

./: .dockerignore  .envrc  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  github-release-download.py  github-releases.yaml  pyproject.toml  requirements.in  requirements.txt  setup  setup.py
config/: github-releases.yaml
github_release_downloader/: __init__.py  github_release_downloader.py
tests/: test_github_release_downloader.py
